Added explanations to HF movie genre competition

--- a/cursos/espanol/deeplearning/HF_movie_genre_prediciton_zeroshot.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediciton_zeroshot.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prediccion del Genero de una Pelicula\n",
+    "\n",
+    "## Solucion Zero Shot Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -22,8 +31,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df_train = pd.read_parquet('./data/movie-genre-prediction/train.parquet', engine='pyarrow')\n",
-    "df_test = pd.read_parquet('./data/movie-genre-prediction/test.parquet', engine='pyarrow')"
+    "df_train = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/train.parquet', engine='pyarrow')\n",
+    "df_test = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/test.parquet', engine='pyarrow')"
    ]
   },
   {
@@ -422,6 +431,13 @@
    "outputs": [],
    "source": [
     "df_submission.to_csv(\"submission3.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
    ]
   }
  ],
