--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb
@@ -35,6 +35,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77da4b1c-2397-439a-8008-dce421164c73",
+   "metadata": {},
+   "source": [
+    "Instalamos la libreria pyarrow para abrir los datasets que estan en formato parquet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "12edee1a-bde5-4d9f-b6ce-a8d61879ea3c",
@@ -54,6 +62,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ea41cf0-2f99-4032-9b1b-2ccc57d688a1",
+   "metadata": {},
+   "source": [
+    "Cargamos los datasets de train y test utilizando pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "e4feb535-309e-4679-ae4b-08323c556ab2",
@@ -62,6 +78,20 @@
    "source": [
     "df_train = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/train.parquet', engine='pyarrow')\n",
     "df_test = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/test.parquet', engine='pyarrow')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db4e3d83-19cd-4460-8cc0-fbb489f731d2",
+   "metadata": {},
+   "source": [
+    "Vemos las primeras filas del dataset de entrenamiento.\n",
+    "\n",
+    "Contiene las siguientes columnas:\n",
+    "- **id:** un numero que identifica a cada pelicula\n",
+    "- **movie_name:** el nombre de la pelicula\n",
+    "- **synopsis:** breve descripcion de la pelicula\n",
+    "- **genre:** el genero de la pelicula que la variable a predecir"
    ]
   },
   {
@@ -163,6 +193,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "001f88d0-e307-4c86-b4e3-57309dda1587",
+   "metadata": {},
+   "source": [
+    "Vemos que tiene 54 mil filas y 4 columnas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "294280cc-6ab5-44be-864f-6232f1475c7a",
@@ -181,6 +219,14 @@
    ],
    "source": [
     "df_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce83ce8d-5ae6-4487-941b-715185e371ee",
+   "metadata": {},
+   "source": [
+    "Vemos que los generos a predecir son los siguientes:"
    ]
   },
   {
@@ -212,6 +258,14 @@
    "source": [
     "genres_list = list(df_train.genre.unique())\n",
     "genres_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d643a263-fb53-41fb-beb2-c4d100d1c788",
+   "metadata": {},
+   "source": [
+    "Ahora vemos las primeras filas del dataset de test"
    ]
   },
   {
@@ -334,6 +388,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a91e192-4b20-4238-9f69-cb6e01fd6b04",
+   "metadata": {},
+   "source": [
+    "Se le ha puesto a todas las peliculas el genero accion. Nosotros lo deberemos reemplazar con nuestra prediccion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "130aef1b-f4f5-4d09-b7ef-43c4b3aceb83",
@@ -353,6 +415,14 @@
    ],
    "source": [
     "df_test.genre.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9a7a71e-514f-4443-977b-d215a67fd73e",
+   "metadata": {},
+   "source": [
+    "Nuestra solucion simple de base sera ver si la palabra correspondiente al genero se encuentra en la sinopsis. Si esto es asi le pondremos ese genero como prediccion. Veamos el ejemplo con el genero de \"horror\":"
    ]
   },
   {
@@ -546,6 +616,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e98296b8-56da-45cd-91b4-f45e310cd42f",
+   "metadata": {},
+   "source": [
+    "Hagamos que todas las sinopsis esten en minusculas:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "caff8cfe-b064-4647-b0f7-d705252871d7",
@@ -645,6 +723,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5b794bc-320d-4bc4-91c6-cc4b800aab86",
+   "metadata": {},
+   "source": [
+    "Ahora hacemos lo que hicimos con el genero \"horror\" con todos los generos y esa sera nuestra primera solucion:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "b7a08551-8b45-4382-bcfb-ab6381b6585d",
@@ -653,6 +739,14 @@
    "source": [
     "for genre in genres_list:\n",
     "    df_test.loc[df_test[\"synopsis\"].str.contains(genre),[\"genre\"]] = genre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d863a65-417d-4411-a7a4-bb98da1ceaed",
+   "metadata": {},
+   "source": [
+    "Finalmente creamos un archivo .csv para enviar nuestra solucion a la competencia:"
    ]
   },
   {
@@ -676,12 +770,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "581c1100-a99c-4408-8717-51940af0ccbc",
+   "cell_type": "markdown",
+   "id": "56b10ffa-6142-4cd9-8f47-731c3fae5b93",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
   }
  ],
  "metadata": {
