--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb
@@ -33,125 +33,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5845ddc4-c885-4e7e-99e2-1fc090ce74b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>movie_name</th>\n",
-       "      <th>synopsis</th>\n",
-       "      <th>genre</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>44978</td>\n",
-       "      <td>Super Me</td>\n",
-       "      <td>A young scriptwriter starts bringing valuable ...</td>\n",
-       "      <td>fantasy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50185</td>\n",
-       "      <td>Entity Project</td>\n",
-       "      <td>A director and her friends renting a haunted h...</td>\n",
-       "      <td>horror</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34131</td>\n",
-       "      <td>Behavioral Family Therapy for Serious Psychiat...</td>\n",
-       "      <td>This is an educational video for families and ...</td>\n",
-       "      <td>family</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>78522</td>\n",
-       "      <td>Blood Glacier</td>\n",
-       "      <td>Scientists working in the Austrian Alps discov...</td>\n",
-       "      <td>scifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2206</td>\n",
-       "      <td>Apat na anino</td>\n",
-       "      <td>Buy Day - Four Men Widely - Apart in Life - By...</td>\n",
-       "      <td>action</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      id                                         movie_name  \\\n",
-       "0  44978                                           Super Me   \n",
-       "1  50185                                     Entity Project   \n",
-       "2  34131  Behavioral Family Therapy for Serious Psychiat...   \n",
-       "3  78522                                      Blood Glacier   \n",
-       "4   2206                                      Apat na anino   \n",
-       "\n",
-       "                                            synopsis    genre  \n",
-       "0  A young scriptwriter starts bringing valuable ...  fantasy  \n",
-       "1  A director and her friends renting a haunted h...   horror  \n",
-       "2  This is an educational video for families and ...   family  \n",
-       "3  Scientists working in the Austrian Alps discov...    scifi  \n",
-       "4  Buy Day - Four Men Widely - Apart in Life - By...   action  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "294280cc-6ab5-44be-864f-6232f1475c7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(54000, 4)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "f7da1477-476a-4298-9c3b-45958ade4389",
    "metadata": {},
@@ -179,147 +60,6 @@
    "source": [
     "genres_list = list(df_train.genre.unique())\n",
     "genres_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9d6c40c4-2670-448c-9e9d-81d534c14804",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>movie_name</th>\n",
-       "      <th>synopsis</th>\n",
-       "      <th>genre</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16863</td>\n",
-       "      <td>A Death Sentence</td>\n",
-       "      <td>12 y.o. Ida's dad'll die without a DKK1,500,00...</td>\n",
-       "      <td>action</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>48456</td>\n",
-       "      <td>Intermedio</td>\n",
-       "      <td>A group of four teenage friends become trapped...</td>\n",
-       "      <td>action</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>41383</td>\n",
-       "      <td>30 Chua Phai Tet</td>\n",
-       "      <td>A guy left his home for 12 years till he came ...</td>\n",
-       "      <td>action</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>84007</td>\n",
-       "      <td>Paranoiac</td>\n",
-       "      <td>A man long believed dead returns to the family...</td>\n",
-       "      <td>action</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>40269</td>\n",
-       "      <td>Ordinary Happiness</td>\n",
-       "      <td>After a deadly accident, Paolo comes back on E...</td>\n",
-       "      <td>action</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      id          movie_name  \\\n",
-       "0  16863    A Death Sentence   \n",
-       "1  48456          Intermedio   \n",
-       "2  41383    30 Chua Phai Tet   \n",
-       "3  84007           Paranoiac   \n",
-       "4  40269  Ordinary Happiness   \n",
-       "\n",
-       "                                            synopsis   genre  \n",
-       "0  12 y.o. Ida's dad'll die without a DKK1,500,00...  action  \n",
-       "1  A group of four teenage friends become trapped...  action  \n",
-       "2  A guy left his home for 12 years till he came ...  action  \n",
-       "3  A man long believed dead returns to the family...  action  \n",
-       "4  After a deadly accident, Paolo comes back on E...  action  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "397ef5a1-8488-4b96-a5b0-d7ebc09689e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(36000, 4)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "130aef1b-f4f5-4d09-b7ef-43c4b3aceb83",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "action    36000\n",
-       "Name: genre, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test.genre.value_counts()"
    ]
   },
   {
@@ -911,12 +651,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf28dddc-55f0-45ab-be86-b96d4fbbf432",
+   "cell_type": "markdown",
+   "id": "d4f7fe2b-9fd4-4ce1-84e0-463c399e090f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
   }
  ],
  "metadata": {
