--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "df_ensemble = ((df_xlnet**5) + (df_roberta**5)) / 2\n",
+    "df_ensemble = ((df_xlnet**5) + (df_roberta**5))\n",
     "df_ensemble.head(2)"
    ]
   },
@@ -444,6 +444,14 @@
    "outputs": [],
    "source": [
     "# score: 0.43044444444444446"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64017e60-e8b7-4b6e-9145-578a8e0f0350",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
    ]
   }
  ],
