Updated autoencoders and matrix visualization

--- a/cursos/espanol/deeplearning/E1_grafos_backprop_autograd.ipynb
+++ b/cursos/espanol/deeplearning/E1_grafos_backprop_autograd.ipynb
@@ -420,6 +420,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1589e7de-ce40-42de-a4c7-3fd3b8b7f5ce",
+   "metadata": {},
+   "source": [
+    "# Visualizando Matrices\n",
+    "\n",
+    "- [Visualizando Matrices con Pytorch](https://pytorch.org/blog/inside-the-matrix/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fd55c2d1-db67-47c4-8c59-e087f2d35611",
    "metadata": {},
    "source": [
