--- a/cursos/espanol/deeplearning/E3_Autoencoders_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E3_Autoencoders_Arch.ipynb
@@ -91,31 +91,11 @@
     "\n",
     "model = MLPClassifier(hidden_layer_sizes=(3,), \n",
     "                      activation='logistic', \n",
-    "                      #random_state=42,queremos que los pesos sean aleatorios\n",
-    "                      max_iter=10000)\n",
+    "                      max_iter=10000,\n",
+    "                      random_state=None #iniciacion aleatoria de los pesos\n",
+    "                      )\n",
     "\n",
     "model.fit(X, y);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5d47c23-572f-4af6-a907-1aea9c3552e1",
-   "metadata": {},
-   "source": [
-    "## Pesos y predicciones de la red neuronal "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a3143d8e-c377-4cc5-aeb4-e5dc9a4e5945",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "def sigmoid(x):\n",
-    "    return 1 / (1 + math.exp(-x))\n",
-    "sigmoid_v = np.vectorize(sigmoid)"
    ]
   },
   {
@@ -127,6 +107,11 @@
    "source": [
     "#@title Codigo para dibujar una red neuronal de sklearn {display-mode:\"form\"}\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import math\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + math.exp(-x))\n",
+    "sigmoid_v = np.vectorize(sigmoid)\n",
     "\n",
     "def draw_neural_net_rectangular(ax, layer_sizes, weights, neuron_values):\n",
     "    left, right, bottom, top, = .1, .9, .1, .9\n",
@@ -189,10 +174,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5d47c23-572f-4af6-a907-1aea9c3552e1",
+   "metadata": {},
+   "source": [
+    "## Pesos y predicciones de la red neuronal "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b144c78-a8dc-43bc-80f5-74018c6da489",
    "metadata": {},
    "source": [
-    "## Ejecutar varias veces la siguiente celda para ver los diferentes encodings"
+    "#### Ejecutar varias veces la siguiente celda para ver los diferentes encodings"
    ]
   },
   {
