Testing .md files as webpage

--- a/cursos/espanol/deeplearning/LangChain_Chains.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Chains.ipynb
@@ -316,245 +316,19 @@
    "source": [
     "## Router Chain\n",
     "\n",
+    "### Esto ha sido deprecado. Actualizar el tutorial a Router class\n",
+    "- https://python.langchain.com/docs/modules/chains/foundational/router\n",
+    "\n",
     "En este caso podemos elegir que cadena queremos utilizar de acuerdo al tipo de salida de la cadena anterior."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eec3f40-0fee-4a75-ae2a-1edc62cd4d82",
+   "id": "5edab7c6-27da-4ba5-baaf-58446cc8e9aa",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "physics_template = \"\"\"You are a very smart physics professor. \\\n",
-    "You are great at answering questions about physics in a concise\\\n",
-    "and easy to understand manner. \\\n",
-    "When you don't know the answer to a question you admit\\\n",
-    "that you don't know.\n",
-    "\n",
-    "Here is a question:\n",
-    "{input}\"\"\"\n",
-    "\n",
-    "\n",
-    "math_template = \"\"\"You are a very good mathematician. \\\n",
-    "You are great at answering math questions. \\\n",
-    "You are so good because you are able to break down \\\n",
-    "hard problems into their component parts, \n",
-    "answer the component parts, and then put them together\\\n",
-    "to answer the broader question.\n",
-    "\n",
-    "Here is a question:\n",
-    "{input}\"\"\"\n",
-    "\n",
-    "history_template = \"\"\"You are a very good historian. \\\n",
-    "You have an excellent knowledge of and understanding of people,\\\n",
-    "events and contexts from a range of historical periods. \\\n",
-    "You have the ability to think, reflect, debate, discuss and \\\n",
-    "evaluate the past. You have a respect for historical evidence\\\n",
-    "and the ability to make use of it to support your explanations \\\n",
-    "and judgements.\n",
-    "\n",
-    "Here is a question:\n",
-    "{input}\"\"\"\n",
-    "\n",
-    "\n",
-    "computerscience_template = \"\"\" You are a successful computer scientist.\\\n",
-    "You have a passion for creativity, collaboration,\\\n",
-    "forward-thinking, confidence, strong problem-solving capabilities,\\\n",
-    "understanding of theories and algorithms, and excellent communication \\\n",
-    "skills. You are great at answering coding questions. \\\n",
-    "You are so good because you know how to solve a problem by \\\n",
-    "describing the solution in imperative steps \\\n",
-    "that a machine can easily interpret and you know how to \\\n",
-    "choose a solution that has a good balance between \\\n",
-    "time complexity and space complexity. \n",
-    "\n",
-    "Here is a question:\n",
-    "{input}\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74778809-a5da-4076-b452-f8f6c68c22b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt_infos = [\n",
-    "    {\n",
-    "        \"name\": \"physics\", \n",
-    "        \"description\": \"Good for answering questions about physics\", \n",
-    "        \"prompt_template\": physics_template\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"math\", \n",
-    "        \"description\": \"Good for answering math questions\", \n",
-    "        \"prompt_template\": math_template\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"History\", \n",
-    "        \"description\": \"Good for answering history questions\", \n",
-    "        \"prompt_template\": history_template\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"computer science\", \n",
-    "        \"description\": \"Good for answering computer science questions\", \n",
-    "        \"prompt_template\": computerscience_template\n",
-    "    }\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa479794-1dc3-41c0-b2a2-c9917798399d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chains.router import MultiPromptChain\n",
-    "from langchain.chains.router.llm_router import LLMRouterChain,RouterOutputParser\n",
-    "from langchain.prompts import PromptTemplate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a5ff200-dea5-4e00-b58c-37ea9a9bd2a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad77754a-036e-4e49-9f6e-6dfa70076b61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "destination_chains = {}\n",
-    "for p_info in prompt_infos:\n",
-    "    name = p_info[\"name\"]\n",
-    "    prompt_template = p_info[\"prompt_template\"]\n",
-    "    prompt = ChatPromptTemplate.from_template(template=prompt_template)\n",
-    "    chain = LLMChain(llm=llm, prompt=prompt)\n",
-    "    destination_chains[name] = chain  \n",
-    "    \n",
-    "destinations = [f\"{p['name']}: {p['description']}\" for p in prompt_infos]\n",
-    "destinations_str = \"\\n\".join(destinations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5bf05e4-d8c0-43c9-a311-729dea07661e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "default_prompt = ChatPromptTemplate.from_template(\"{input}\")\n",
-    "default_chain = LLMChain(llm=llm, prompt=default_prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18c7016a-0336-4b99-b6b0-060c8a48b28e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MULTI_PROMPT_ROUTER_TEMPLATE = \"\"\"Given a raw text input to a \\\n",
-    "language model select the model prompt best suited for the input. \\\n",
-    "You will be given the names of the available prompts and a \\\n",
-    "description of what the prompt is best suited for. \\\n",
-    "You may also revise the original input if you think that revising\\\n",
-    "it will ultimately lead to a better response from the language model.\n",
-    "\n",
-    "<< FORMATTING >>\n",
-    "Return a markdown code snippet with a JSON object formatted to look like:\n",
-    "```json\n",
-    "{{{{\n",
-    "    \"destination\": string \\ name of the prompt to use or \"DEFAULT\"\n",
-    "    \"next_inputs\": string \\ a potentially modified version of the original input\n",
-    "}}}}\n",
-    "```\n",
-    "\n",
-    "REMEMBER: \"destination\" MUST be one of the candidate prompt \\\n",
-    "names specified below OR it can be \"DEFAULT\" if the input is not\\\n",
-    "well suited for any of the candidate prompts.\n",
-    "REMEMBER: \"next_inputs\" can just be the original input \\\n",
-    "if you don't think any modifications are needed.\n",
-    "\n",
-    "<< CANDIDATE PROMPTS >>\n",
-    "{destinations}\n",
-    "\n",
-    "<< INPUT >>\n",
-    "{{input}}\n",
-    "\n",
-    "<< OUTPUT (remember to include the ```json)>>\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc63b8a2-7b65-491f-83ff-900013070153",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "router_template = MULTI_PROMPT_ROUTER_TEMPLATE.format(\n",
-    "    destinations=destinations_str\n",
-    ")\n",
-    "router_prompt = PromptTemplate(\n",
-    "    template=router_template,\n",
-    "    input_variables=[\"input\"],\n",
-    "    output_parser=RouterOutputParser(),\n",
-    ")\n",
-    "\n",
-    "router_chain = LLMRouterChain.from_llm(llm, router_prompt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba64ca24-aaf0-4018-ba1f-f3f798105223",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chain = MultiPromptChain(router_chain=router_chain, \n",
-    "                         destination_chains=destination_chains, \n",
-    "                         default_chain=default_chain, verbose=True\n",
-    "                        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2ea473e-76e4-4b12-8c00-60a6bbd4e6fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chain.run(\"What is black body radiation?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "272af205-7c84-4eb2-addc-c9e316aa941b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chain.run(\"what is 2 + 2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec6227ed-bcff-461c-8381-11eb847f74f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chain.run(\"Why does every cell in our body contain DNA?\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
