--- a/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb
@@ -45,13 +45,19 @@
     "if api_key == \"INGRESA AQUI TU TOKEN DE OPENAI\":\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
-    "\n",
     "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "        token = f.read()\n",
-    "        client = OpenAI(\n",
-    "            # defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
-    "            api_key=token,\n",
-    "        )"
+    "        api_key = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d44bef4-831c-42c2-87ed-f20134c51e66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
+    "client = OpenAI(api_key=api_key)"
    ]
   },
   {
