--- a/cursos/espanol/deeplearning/LangChain_Agents.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Agents.ipynb
@@ -57,8 +57,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "        token = f.read()\n",
-    "        openai.api_key = token"
+    "        api_key = f.read()\n",
+    "        openai.api_key = api_key"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
+    "llm = ChatOpenAI(openai_api_key=api_key, temperature=0.0, model=\"gpt-3.5-turbo\")"
    ]
   },
   {
@@ -405,9 +405,8 @@
    "source": [
     "## Crear nuestro propio Agente\n",
     "\n",
-    "- https://blog.langchain.dev/custom-agents/\n",
-    "- https://python.langchain.com/docs/modules/agents/how_to/custom_agent\n",
-    "- https://artificialcorner.com/how-to-build-tool-using-agents-with-langchain-d9fa9674b6c7"
+    "- https://python.langchain.com/docs/modules/agents/how_to/custom_llm_agent\n",
+    "- https://python.langchain.com/docs/modules/agents/how_to/custom_agent"
    ]
   },
   {
