--- a/cursos/espanol/deeplearning/LangChain_Chains.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Chains.ipynb
@@ -49,8 +49,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "        token = f.read()\n",
-    "        openai.api_key = token"
+    "        api_key = f.read()\n",
+    "        openai.api_key = api_key"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
+    "llm = ChatOpenAI(openai_api_key=api_key, temperature=0.0, model=\"gpt-3.5-turbo\")"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
+    "llm = ChatOpenAI(openai_api_key=api_key, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
     "\n",
     "# prompt template 1\n",
     "first_prompt = ChatPromptTemplate.from_template(\n",
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
+    "llm = ChatOpenAI(openai_api_key=api_key, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
     "\n",
     "# prompt template 1: translate to english\n",
     "first_prompt = ChatPromptTemplate.from_template(\n",
