--- a/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_Prompting.ipynb
@@ -53,8 +53,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "        token = f.read()\n",
-    "        openai.api_key = token"
+    "        api_key = f.read()\n",
+    "        openai.api_key = api_key"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "chat = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
+    "chat = ChatOpenAI(openai_api_key=api_key, temperature=0.0, model=\"gpt-3.5-turbo\")"
    ]
   },
   {
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
+    "llm = ChatOpenAI(openai_api_key=api_key, temperature=0.0, model=\"gpt-3.5-turbo\")\n",
     "\n",
     "memory = ConversationBufferMemory()\n",
     "conversation = ConversationChain(\n",
