--- a/cursos/espanol/deeplearning/LangChain_RAG.ipynb
+++ b/cursos/espanol/deeplearning/LangChain_RAG.ipynb
@@ -51,8 +51,8 @@
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "    with open('drive/MyDrive/Tokens/openai.txt','r') as f:\n",
-    "        token = f.read()\n",
-    "        openai.api_key = token"
+    "        api_key = f.read()\n",
+    "        openai.api_key = api_key"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "chat = ChatOpenAI(openai_api_key=token, temperature=0.0, model=\"gpt-3.5-turbo\")"
+    "chat = ChatOpenAI(openai_api_key=api_key, temperature=0.0, model=\"gpt-3.5-turbo\")"
    ]
   },
   {
