Added pedacitos de codigo

--- a/cursos/espanol/deeplearning/6_obtener_vectores.ipynb
+++ b/cursos/espanol/deeplearning/6_obtener_vectores.ipynb
@@ -48,10 +48,10 @@
    "source": [
     "#Textos a vectorizar\n",
     "sentences = [\n",
-    "    'Los pajaros vuelan hacia el sur en una tarde fria.',\n",
-    "    'Parrilla de acero inoxidable para barbacoa.',\n",
-    "    'El amanecer en la laguna se tiño de rosa con la llegada de flamencos.',\n",
-    "    'Cuchillo japones para cortar carne waygu'\n",
+    "    'Italy',\n",
+    "    'Spain',\n",
+    "    'Germany',\n",
+    "    'France'\n",
     "]"
    ]
   },
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"Un barco flotaba sobre el agua calma\"\n",
+    "query = \"Madrid\"\n",
     "query_embedding = model.encode(query)"
    ]
   },
